tests/baselines/reference/subtypingTransitivity.errors.txt
tests/cases/compiler/subtypingTransitivity.ts(6,12): error TS2612: Property 'x' will overwrite the base property in 'B'. Add a 'declare' modifier or an initializer to avoid this.
tests/cases/compiler/subtypingTransitivity.ts(9,12): error TS2612: Property 'x' will overwrite the base property in 'B'. Add a 'declare' modifier or an initializer to avoid this.


==== tests/cases/compiler/subtypingTransitivity.ts (2 errors) ====
    class B {
        x: Object;
    }
    
    class D extends B {
        public x: string;
               ~
!!! error TS2612: Property 'x' will overwrite the base property in 'B'. Add a 'declare' modifier or an initializer to avoid this.
    }
    class D2 extends B {
        public x: number;
               ~
!!! error TS2612: Property 'x' will overwrite the base property in 'B'. Add a 'declare' modifier or an initializer to avoid this.
    }
    
    var b: B;
    var d: D;
    var d2: D2;
    
    d.x = '';
    b = d;
    b.x = 1; // assigned number to string
    